tests/ui/view-types/must-exist.stderr
error: expected parameter name, found `{`
  --> $DIR/must-exist.rs:10:11
   |
LL | fn f(_: S.{ bar }) {}
   |           ^ expected parameter name

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `.`
  --> $DIR/must-exist.rs:10:10
   |
LL | fn f(_: S.{ bar }) {}
   |          ^
   |          |
   |          expected one of 7 possible tokens
   |          help: missing `,`

error: expected parameter name, found `{`
  --> $DIR/must-exist.rs:11:11
   |
LL | fn g(_: S.{ foo, bar }) {}
   |           ^ expected parameter name

error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `.`
  --> $DIR/must-exist.rs:11:10
   |
LL | fn g(_: S.{ foo, bar }) {}
   |          ^
   |          |
   |          expected one of 7 possible tokens
   |          help: missing `,`

error: aborting due to 4 previous errors

